--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -48,10 +48,10 @@
 					</p>
 				</div>
 			</div>
-			<div id="layout">
-				<div id="intro" class="anm-fadeIn delay-600">
-					<div id="follow-yt" class="anm-fadeIn delay-600">
-						<img src="{{ site.avatar }}" id="avatar" class="anm-scaleUp delay-700" rel="Logo Videos Manguis">
+			<div id="layout" class="anm-fadeIn delay-700">
+				<div id="intro">
+					<div id="follow-yt" class="anm-fadeIn delay-800">
+						<img src="{{ site.avatar }}" id="avatar" class="anm-scaleUp delay-900" rel="Logo Videos Manguis">
 						<script src="https://apis.google.com/js/platform.js"></script>
 						<div class="g-ytsubscribe" data-channelid="UCHffnAhZO1wWlhxRg0mAf2w" data-layout="default" data-count="default"></div>
 					</div>
@@ -68,7 +68,7 @@
 				</div>
 			</div>
 			<hr>
-			<section id="starwars" class="full-cover anm-fadeIn delay-800">
+			<section id="starwars" class="full-cover anm-fadeIn delay-1000">
 				<div>
 					<h4>{{ page.previ }}</h4>
 				</div>
