--- a/hipertextos/styles/adding-about.css
+++ b/hipertextos/styles/adding-about.css
@@ -11,7 +11,7 @@
 .cover-page a, .cover-page a:visited {color:currentcolor !important;background-color: transparent !important;}
 .cover-page a:hover {color:currentcolor !important;background-color: transparent !important;}
 .cover-page  #coffee {  background: var(--color-background);background: -webkit-linear-gradient(red, var(--color-background));background: -moz-linear-gradient(red, var(--color-background)); background: linear-gradient(#eee, var(--color-background));}
-.cover-page h5 {line-height:1.4em;}
+.cover-page h5 {line-height:1.4em;font-weight: normal;margin:0;}
 .cover-page h2, .cover-page h3 {text-align:center;}
 .cover-page h2 {margin:0;}
 .cover-page h3 {margin:0 0 60px 0;}
