--- a/hipertextos/styles/adding.css
+++ b/hipertextos/styles/adding.css
@@ -74,8 +74,8 @@ form .button {border:thin solid currentColor;margin-top:0.6em;}
 #dialog header h2 {font-size: 2.3em;margin-bottom:6px;}
 #dialog header .lead {line-height: 1em;margin-bottom:7px;}
 #about-icons em a {font-size:15px;text-decoration:none;}
-img.dialog-svg {width:80px;height:80px;border-radius:23%;}
-#dialog dialog div a {font-size:15px;}
+img.dialog-svg {width:70px;height:70px;border-radius:21%;}
+#dialog dialog div a {font-size:15px;color:currentcolor;}
 #dialog header {padding-top:0px;}
 #dialog header, #dialog dialog label  {background:var(--color-soft-black);color:var(--color-hardgrey);}
 .rights#dialog dialog label  {background:transparent;color:var(--color-hardgrey);}
