--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -76,6 +76,16 @@
 			<div>
 				<section>
 					<hr>
+					<nav id="page-nav" class="nav-scroll">
+						<div>
+						<a href="#ep1">I</a> &nbsp;&nbsp;
+						<a href="#ep2">II</a> &nbsp;&nbsp;
+						<a href="#ep3">III</a> &nbsp;&nbsp;
+						<a href="#ep4">IV</a> &nbsp;&nbsp;
+						<a href="#ep5">V</a> &nbsp;&nbsp;
+						<a href="#ep6">VI</a> &nbsp;&nbsp;
+						
+						</div>
 					<article id="about-content"  class="anm-moveFromBottomFade delay-900">
 					{{ content }}
 					</article>
