--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -84,8 +84,8 @@
 						<a href="#ep4">IV</a> &nbsp;&nbsp;
 						<a href="#ep5">V</a> &nbsp;&nbsp;
 						<a href="#ep6">VI</a> &nbsp;&nbsp;
-						
 						</div>
+					</nav>
 					<article id="about-content"  class="anm-moveFromBottomFade delay-900">
 					{{ content }}
 					</article>
