--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,9 @@
 		<input type="radio" id="theme-light" name="theme" aria-hidden="true" hidden>
 		<input type="radio" id="theme-soft" name="theme" aria-hidden="true" hidden>
 		<input type="radio" id="theme-dark" name="theme" aria-hidden="true" hidden>
-		
+
 	<!-- Page content -->
+  	{% include partials/navigation/nav.html %}
 	<div class="page" id="page">
       {{ content }}
     {% include partials/footer.html %}
