--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -73,7 +73,7 @@
 					<h4>{{ page.previ }}</h4>
 				</div>
 			</section>
-			<nav id="page-nav" class="top-index">
+			<nav id="page-nav" class="nav-scroll">
 				<div>
 					<a href="#ep1">I</a> &nbsp;&nbsp;
 					<a href="#ep2">II</a> &nbsp;&nbsp;
