--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -57,7 +57,7 @@
 			</div>
 					<em><hr></em>
 					<h5>{{ page.intro }}</h5>
-					<p><b>Nota:</b> Mira la que lió George Lucas por no hacer las cosas bien desde el principio...</p>
+					<p><b>Nota:</b> Mira lo que pasó con George Lucas por no hacer las cosas bien desde el principio...</p>
 					<div id="spoilers">
 					<em><hr></em>
 						<h2>Atención Spoilers!</h2>
