--- a/hipertextos/styles/adding-about.css
+++ b/hipertextos/styles/adding-about.css
@@ -5,8 +5,9 @@
 #about-content {border:none;}
 #about-icons a {border:none; }
 #about-icons {text-align: center;top:12px;}
-#avatar { margin: 0 19px 0 2%;float:left;padding: 2px; max-width:180px;margin-bottom:23px;}
+#avatar { margin: 0 19px 0 2%;float:left;padding: 2px; max-width:160px;margin-bottom:23px;}
 .cover-page #page-header {text-align:left;border-bottom:10px solid var(--color-softtext);background-color: var(--color-black);color: rgba(220,220,220,1);}
+#page-header h4 {line-height:1.4em;padding-top:3px;margin-top:3px;}
 .cover-page #page-main {color:currentcolor;}
 .cover-page a, .cover-page a:visited {color:currentcolor !important;background-color: transparent !important;}
 .cover-page a:hover {color:currentcolor !important;background-color: transparent !important;}
@@ -18,12 +19,11 @@
 #about-content img {float:left;margin:9px 15px 9px 0;}
 .cover-page p {line-height:1.4em;font-weight: normal;font-size:26px;}
 
-#follow-yt {max-width:180px;float:left;text-align: center;margin-right:15px;}
+#follow-yt {float:left;text-align: center;margin-right:15px;}
 section.full-cover {background:var(--color-black);padding:6% 19% 6% 19%;color:var(--color-blue);}
 .full-cover div h4 {line-height:1.6em;}
-#intro h4 {line-height:1.4em;padding-top:2%;margin-top:16px;}
 #intro #spoilers h2, #intro #spoilers h6 {text-align: center!important;margin-bottom:6px;color:var(--color-transgrey);}
-
+#intro #subs {text-align:center;}
 
 @media (max-width: 1250px) {
     section.full-cover {padding:5% 2% 5% 2%;}
