--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -41,8 +41,10 @@
 		<main id="page-main">
 			<div id="layout" class="anm-fadeIn delay-700">
 				<div id="intro">
-					<script src="https://apis.google.com/js/platform.js"></script>
-					<div class="g-ytsubscribe" data-channelid="UCHffnAhZO1wWlhxRg0mAf2w" data-layout="default" data-count="default"></div>
+					<div id="subs">
+						<script src="https://apis.google.com/js/platform.js"></script>
+						<div class="g-ytsubscribe" data-channelid="UCHffnAhZO1wWlhxRg0mAf2w" data-layout="default" data-count="default"></div>
+					</div>
 				<br>
 			<div id="about-icons">
 				<div>
