--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -80,8 +80,7 @@
 					<a href="#ep2">II</a> &nbsp;&nbsp;
 					<a href="#ep3">III</a> &nbsp;&nbsp;
 					<a href="#ep4">IV</a> &nbsp;&nbsp;
-					<a href="#ep5">V</a> &nbsp;&nbsp;
-					<a href="#ep6">VI</a> &nbsp;&nbsp;
+					<a href="#ep5">Ir al grano</a> &nbsp;&nbsp;
 				</div>
 			</nav>
 			<div>
