--- a/hipertextos/styles/adding-about.css
+++ b/hipertextos/styles/adding-about.css
@@ -17,6 +17,7 @@
 .cover-page h3 {margin:0 0 60px 0;}
 #about-content h2, #about-content h4 {text-align:center;}
 #about-content h4 {font-weight:lighter ;margin:2% 0 4% 0;}
+#about-content h1 {text-align:center;}
 #about-content img {float:left;margin:9px 15px 9px 0;}
 .cover-page p {line-height:1.4em;font-weight: normal;font-size:26px;}
 
