--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -76,11 +76,11 @@
 			</section>
 			<nav id="page-nav" class="nav-scroll">
 				<div>
-					<a href="#ep1">I</a> &nbsp;&nbsp;
-					<a href="#ep2">II</a> &nbsp;&nbsp;
-					<a href="#ep3">III</a> &nbsp;&nbsp;
-					<a href="#ep4">IV</a> &nbsp;&nbsp;
-					<a href="#ep5">Ir al grano</a> &nbsp;&nbsp;
+					<a href="#ep1" title="Episodio I">I</a> &nbsp;&nbsp;
+					<a href="#ep2" title="Episodio II">II</a> &nbsp;&nbsp;
+					<a href="#ep3" title="Episodio III">III</a> &nbsp;&nbsp;
+					<a href="#ep4" title="Episodio IV">IV</a> &nbsp;&nbsp;
+					<a href="#ep5" title="Episodio Final">Ir al grano</a> &nbsp;&nbsp;
 				</div>
 			</nav>
 			<div>
