--- a/hipertextos/styles/adding-about.css
+++ b/hipertextos/styles/adding-about.css
@@ -19,14 +19,14 @@
 #about-content h4 {font-weight:lighter ;margin:2% 0 4% 0;}
 #about-content h1 {text-align:center;}
 #about-content img {float:left;margin:9px 15px 9px 0;}
-.cover-page p {line-height:1.4em;font-weight: normal;font-size:26px;}
+#about-content p {line-height:1.6em;font-weight: normal;font-size:26px;}
 
 #follow-yt {float:left;text-align: center;margin-right:15px;}
 section.full-cover {background:var(--color-black);padding:6% 19% 6% 19%;color:var(--color-blue);}
 .full-cover div h4 {line-height:1.6em;}
 #intro #spoilers h2, #intro #spoilers h6 {text-align: center!important;margin-bottom:6px;color:var(--color-transgrey);}
 #intro #subs {text-align:center;margin-top:1%;}
-#ep2, #ep3, #ep4, #ep5 {border-top:thin solid currentcolor;}
+#ep2, #ep3, #ep4, #ep5 {border-top:thin solid currentcolor;margin-top:23px;}
 
 @media (max-width: 1250px) {
     section.full-cover {padding:5% 2% 5% 2%;}
