--- a/hipertextos/styles/adding-about.css
+++ b/hipertextos/styles/adding-about.css
@@ -21,8 +21,8 @@
 #about-content h1 {text-align:center;}
 #about-content img {float:left;margin:9px 15px 9px 0;}
 #about-content p {line-height:1.6em;font-weight: normal;font-size:26px;}
-#about-content blockquote {border:thin solid currentcolor;border-left:12px solid currentcolor;}
-
+#about-content blockquote {border:thin solid currentcolor;border-left:12px solid currentcolor;text-align:right;}
+#about-content blockquote {background-image: url("/assets/bio/yoda.png");background-size:200px 200px;background-repeat:no-repeat;}
 #follow-yt {float:left;text-align: center;margin-right:15px;}
 section.full-cover {background:var(--color-black);padding:6% 19% 6% 19%;color:var(--color-blue);}
 .full-cover div h4 {line-height:1.6em;}
