--- a/hipertextos/styles/adding.css
+++ b/hipertextos/styles/adding.css
@@ -135,6 +135,7 @@ main { padding-top:3px;margin-bottom: 232px;z-index: 1;
     aside.thumb-3 p {margin:1em 0 1em 0;border-bottom: thin solid #eee;}
 }
 @media (max-width: 1242px) {
+    .lab-post, cat-post {height:75px;width:100%;margin-right:0%;max-height:75px;}
 }
 @media (max-width: 768px) {
     .cover#page-header {padding-top:120px;}
