--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -4,11 +4,11 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
 
 	<meta http-equiv="Content-Language" content="ES-CT"/>
-	<link rel="canonical" href="http://isardmiralles.com/"/>
+	<link rel="canonical" href="http://videosmanguis.net/"/>
 		
 	<meta name="distribution" content="global"/>
-	<meta name="keywords" content="Isard Miralles, disseny, diseny gràfic, diseny web, matte painting, Barcelona, adobe photoshop, contratar freelance, artista web, responsive, html5 i css3" />
-	<meta name="description" content="{{ site.description }} | Edició de pàgines web originals, il·lustració tradicional, serveis de papelería i disseny gràfic" />
+	<meta name="keywords" content="Videos Manguis, humor, videos graciosos, videos divertidos, notícias, series, cine, películas, Star Wars, Stranger Things, Juego de Tronos, review, youtuber, youtube, vacas manguis" />
+	<meta name="description" content="{{ site.description }} | Los YouTubers que estás buscando. Notícias, Cine, Series y humor" />
 
 	<!-- Metadata: GeoTags -->
 	<meta name="geo.region" content="ES-CT" />
