--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -3,7 +3,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
 
-	<meta http-equiv="Content-Language" content="ES-CT"/>
+	<meta http-equiv="Content-Language" content="ES-ES"/>
 	<link rel="canonical" href="http://videosmanguis.net/"/>
 		
 	<meta name="distribution" content="global"/>
@@ -11,7 +11,7 @@
 	<meta name="description" content="{{ site.description }} | Los YouTubers que estás buscando. Notícias, Cine, Series y humor" />
 
 	<!-- Metadata: GeoTags -->
-	<meta name="geo.region" content="ES-CT" />
+	<meta name="geo.region" content="ES" />
 	<meta name="geo.placename" content="Barcelona" />
 	<meta name="geo.position" content="41.4470282;2.2413973" />
 	<meta name="ICBM" content="41.4470282;2.2413973" />
