--- a/_includes/partials/navigation/nav.html
+++ b/_includes/partials/navigation/nav.html
@@ -10,7 +10,7 @@
 						<a href="{{ site.baseurl }}/blog/categories" title="Imperio Vacuno">Categorías</a>
 						<a href="{{ site.baseurl }}/nosotras/" title="Sobre las Vacas Manguis">Nosotras</a>
 						<form action="http://www.google.com/cse"> 
-							<input type="hidden" name="cx" value="GoogleCSEID"> 
+							<input type="hidden" name="cx" value="partner-pub-2493257171023914:6177620106"> 
 							<input type="text" name="q" placeholder="Buscar"> 
 							<input type="submit" name="sa" value="&cirE;"> 
 						</form>
