--- a/hipertextos/styles/components.css
+++ b/hipertextos/styles/components.css
@@ -54,7 +54,7 @@
 #layout-simple:checked ~ #layout-result article nav a {
 	color: currentcolor ;text-decoration: none;
 	height: 69px;float:right;margin-top:-70px;margin-right:10px;
-	line-height: 65px;
+	line-height: 65px;font-size:1.5em;
 	padding: 0;
 	width: 69px;
 }
