--- a/_includes/partials/navigation/nav.html
+++ b/_includes/partials/navigation/nav.html
@@ -9,11 +9,18 @@
 						<a href="{{ site.baseurl }}/" title="BarcelonaCSS">{{ site.name }}</a>
 						<a href="{{ site.baseurl }}/blog/categories" title="Imperio Vacuno">Categorías</a>
 						<a href="{{ site.baseurl }}/nosotras/" title="Sobre las Vacas Manguis">Nosotras</a>
-						<form action="http://www.google.com/cse"> 
-							<input type="hidden" name="cx" value="partner-pub-2493257171023914:8890185994"> 
-							<input type="text" name="q" placeholder="Buscar"> 
-							<input type="submit" name="sa" value="&cirE;"> 
-						</form>
+<script>
+  (function() {
+    var cx = 'partner-pub-2493257171023914:8890185994';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
+<gcse:searchbox-only></gcse:searchbox-only>
 					</div>
 				 </div>
 			</nav>
