--- a/hipertextos/styles/adding-blog.css
+++ b/hipertextos/styles/adding-blog.css
@@ -17,7 +17,7 @@
 #post-download p img {max-width:320px;float:left;border-radius:4px;margin:0 18px 12px 0;}
 #post-download p em a {	font-size: 15px;line-height: 18px;margin-top:17px;}
 #post-download em svg {	font-size: 18px;line-height: 18px;padding: 3px 0 0 0;}
-figure iframe {width:100%;}
+figure iframe {width:100%;	z-index: 100;}
 #post-share em a {color:#fff;border-radius:50%;}
 #post-share em svg {padding:0px 0px 0px 7px;}
 #post-share em a:hover {background:#fff !important;border:thin solid var(--color-link);}
@@ -29,6 +29,7 @@ figure iframe {width:100%;}
 
 h3 a {color: var(--color-hardgrey) }
 h3 a:hover {color: var(--color-link); text-decoration:none;}
+
 
 /* Related Posts */
 #rel img.thumbnails {height: 200px;
