--- a/_includes/partials/header-search.html
+++ b/_includes/partials/header-search.html
@@ -1,5 +1,5 @@
-        <header  id="page-header" class="cover anm-fadeIn delay-300 slow">
-				<h1 class="anm-moveFromBottom delay-300 slow">{{ page.name }}</h1>
+        <header  id="page-header" class="buscar anm-fadeIn delay-300 slow">
+				<h1 class="anm-moveFromBottom delay-300 slow">Buscar</h1>
 <script>
   (function() {
     var cx = 'partner-pub-2493257171023914:8890185994';
