--- a/_includes/partials/navigation/nav.html
+++ b/_includes/partials/navigation/nav.html
@@ -9,7 +9,7 @@
 						<a href="{{ site.baseurl }}/" title="BarcelonaCSS">{{ site.name }}</a>
 						<a href="{{ site.baseurl }}/blog/categories" title="Imperio Vacuno">Categorías</a>
 						<a href="{{ site.baseurl }}/nosotras/" title="Sobre las Vacas Manguis">Nosotras</a>
-						<form action="http://www.google.com/cse.js"> 
+						<form action="https://cse.google.com/cse/publicurl?cx=partner-pub-2493257171023914:8890185994"> 
 							<input type="hidden" name="cx" value="partner-pub-2493257171023914:8890185994"> 
 							<input type="text" name="q" placeholder="Buscar"> 
 							<input type="submit" name="sa" value="&cirE;"> 
