--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,9 +28,15 @@
 		<input type="radio" id="theme-soft" name="theme" aria-hidden="true" hidden>
 		<input type="radio" id="theme-dark" name="theme" aria-hidden="true" hidden>
 
+  	{% if page.modes %}
+  		{% include partials/navigation/nav.html %}
+	{% endif %}
+  	{% if page.killnav %}
+  		{% include partials/navigation/nav-article.html %}
+	{% endif %}
+
 	<!-- Page content -->
 	<div class="page" id="page">
-  	{% include partials/navigation/nav.html %}
       {{ content }}
     {% include partials/footer.html %}
 	</div>
