--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,8 +30,7 @@
 
   	{% if page.modes %}
   		{% include partials/navigation/nav.html %}
-	{% endif %}
-  	{% if page.killnav %}
+	{% else %}
   		{% include partials/navigation/nav-article.html %}
 	{% endif %}
 
