--- a/hipertextos/styles/adding-about.css
+++ b/hipertextos/styles/adding-about.css
@@ -34,6 +34,16 @@ section.full-cover {background:var(--color-black);padding:6% 19% 6% 19%;color:va
 
 /* Sticky navigation */
 
+.nav-article div div[hidden] {
+	display: block;
+	padding: 0 2em;
+	position: relative;
+}
+.nav-article strong label {
+	display: none;
+	padding-right: 26px;
+	position: relative;
+}
 #page-nav.nav-article {
 	background-color: inherit;
 	position: -webkit-sticky; 
