--- a/_includes/partials/navigation/nav-article.html
+++ b/_includes/partials/navigation/nav-article.html
@@ -1,4 +1,4 @@
-			<nav id="site-nav" class="nav-scroll">
+			<nav id="site-nav" class="nav-article">
 				<div>
 					<a class="site-logo" href="{{ site.baseurl }}/" title="Videos Manguis: Inicio">
 						<img src="{{ site.avatar }}" alt="Videos Manguis logo">
