--- a/hipertextos/styles/adding-blog.css
+++ b/hipertextos/styles/adding-blog.css
@@ -1,10 +1,10 @@
 /* by Isard Miralles  ADDING EXTRA to Blog - CSS */
 /* ------------------------------------------------------------ Resets */
 
-#page {
+#page, .post-dark#page-main {
     background-image: url("/img/texture/asfalt.png");background-size:466px 349px;background-repeat: repeat;image-rendering: crisp-edges;}
 .post-dark#page-main h6, .post-dark#page-main h5, .post-dark#page-main h4, .post-dark#page-main h3, .post-dark#page-main h2, .post-dark#page-main p {color:var(--color-transwhite)!important;text-shadow:1px 2px 2px rgba(0,0,0,.5);}
-.post-dark#page-main {border-bottom:8px solid var(--color-grey);}
+.post-dark#page-main {z-index:12;border-bottom:8px solid var(--color-grey);}
 /* Posts */
 #post-title, #date, #post-share {text-align: center;}
 #post-video, #post-download, #post-share, #post-header {border:none;}
