--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -11,6 +11,7 @@
 	<meta name="description" content="Los YouTubers que estás buscando. {{ site.description }} | Star Wars, DC Comics, Marvel, Rick and Morty, Stranger Things, Juego de Tronos, Disney" />
 	<meta name="robots" content="index, follow" />
     <meta name="author" content="Videos Manguis Producciones" />
+    <meta name='designer' content='Isard Miralles'>
 	<meta name="google-site-verification" content="Fo93HRW1pYCpTH0Ms73QTpXnt3PVx2k_2DnPa4YJiNk" />
 	
 	<!-- Metadata: GeoTags -->
