--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -15,7 +15,7 @@
 	<meta name="google-site-verification" content="Fo93HRW1pYCpTH0Ms73QTpXnt3PVx2k_2DnPa4YJiNk" />
 	
 	<!-- Metadata: GeoTags -->
-	<meta name="geo.region" content="ES" />
+	<meta name="geo.region" content="Catalunya" />
 	<meta name="geo.placename" content="Barcelona" />
 	<meta name="geo.position" content="41.4470282;2.2413973" />
 	<meta name="ICBM" content="41.4470282;2.2413973" />
