--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -1,9 +1,7 @@
     <meta name="encoding" charset="utf-8" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta http-equiv='X-UA-Compatible' content='IE=edge' />
+    <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
 
-	<meta http-equiv="Content-Language" content="es-ES"/>
 	<link rel="canonical" href="http://videosmanguis.net/"/>
 		
 	<meta name="distribution" content="global"/>
