--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
-<html lang="ca">
+<html lang="es-ES">
   <head>
-    <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
-
     {% include meta.html %}
 
     <!--[if lt IE 9]>
