--- a/_includes/partials/navigation/nav-article.html
+++ b/_includes/partials/navigation/nav-article.html
@@ -1,7 +1,19 @@
-			<nav id="site-nav" class="nav-article">
+			<nav id="site-nav" class="nav-smart sticky-none">
 				<div>
 					<a class="site-logo" href="{{ site.baseurl }}/" title="Videos Manguis: Inicio">
 						<img src="{{ site.avatar }}" alt="Videos Manguis logo">
 					</a>
+					<input type="checkbox" id="mobnav" name="mobnav" aria-hidden="true" hidden> 
+					<strong><label for="mobnav">Menú<mark></mark></label></strong>
+					<div hidden>
+						<a href="{{ site.baseurl }}/" title="BarcelonaCSS">{{ site.name }}</a>
+						<a href="{{ site.baseurl }}/blog/categories" title="Imperio Vacuno">Categorías</a>
+						<a href="{{ site.baseurl }}/nosotras/" title="Sobre las Vacas Manguis">Nosotras</a>
+						<form action="http://www.google.com/cse"> 
+							<input type="hidden" name="cx" value="2493257171023914:8890185994"> 
+							<input type="text" name="q" placeholder="Buscar"> 
+							<input type="submit" name="sa" value="&cirE;"> 
+						</form>
+					</div>
 				 </div>
 			</nav>
