--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -25,7 +25,7 @@
 		<input type="radio" id="theme-soft" name="theme" aria-hidden="true" hidden>
 		<input type="radio" id="theme-dark" name="theme" aria-hidden="true" hidden>
 		
-	{% include partials/navigation/nav.html %}
+	{% include partials/navigation/nav-article.html %}
 	<!-- Page content -->
 	<div class="page cover-page" id="page">
 		<header id="page-header" class="about-cover anm-moveFromTop delay-200">
