--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
 					<div>
 						<figure>
 							<div>
-								<iframe width="1280" height="720" src="https://www.youtube.com/embed/{{ page.img }}??autoplay=1&rel=0" frameborder="0" allowfullscreen></iframe>
+								<iframe width="1280" height="720" src="https://www.youtube.com/embed/{{ page.img }}?autoplay=1&rel=0" frameborder="0" allowfullscreen></iframe>
 							</div>
 						</figure>
 					</div>
