--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,8 +26,12 @@
 		<input type="radio" id="theme-soft" name="theme" aria-hidden="true" hidden>
 		<input type="radio" id="theme-dark" name="theme" aria-hidden="true" hidden>
 
-  		
+  	{% if page.killnav %}	
+	{% include partials/navigation/nav-article.html %}
+    {% else %}
 	{% include partials/navigation/nav.html %}
+	{% endif %}
+	
 	<!-- Page content -->
 	<div class="page" id="page">
       {{ content }}
