--- a/_includes/partials/navigation/nav.html
+++ b/_includes/partials/navigation/nav.html
@@ -1,4 +1,4 @@
-			<nav id="site-nav" class="nav-smart">
+			<nav id="site-nav" class="nav-smart {% if page.killnav %} sticky-none {% endif %}">
 				<div>
 					<a class="site-logo" href="{{ site.baseurl }}/" title="Videos Manguis: Inicio">
 						<img src="{{ site.avatar }}" alt="Videos Manguis logo">
@@ -10,7 +10,7 @@
 						<a href="{{ site.baseurl }}/blog/categories" title="Imperio Vacuno">Categorías</a>
 						<a href="{{ site.baseurl }}/nosotras/" title="Sobre las Vacas Manguis">Nosotras</a>
 						<form action="https://www.google.com/cse"> 
-							<input type="hidden" name="cx" value="2493257171023914:8890185994"> 
+							<input type="hidden" name="cx" value="partner-pub-2493257171023914:8890185994"> 
 							<input type="text" name="q" placeholder="Buscar"> 
 							<input type="submit" name="sa" value="&cirE;"> 
 						</form>
