--- a/_includes/partials/navigation/nav.html
+++ b/_includes/partials/navigation/nav.html
@@ -6,9 +6,9 @@
 					<input type="checkbox" id="mobnav" name="mobnav" aria-hidden="true" hidden> 
 					<strong><label for="mobnav">Menú<mark></mark></label></strong>
 					<div hidden>
-						<a href="{{ site.baseurl }}/" title="BarcelonaCSS">{{ site.name }}</a>
-						<a href="{{ site.baseurl }}/blog/categories" title="Imperio Vacuno">Categorías</a>
-						<a href="{{ site.baseurl }}/nosotras/" title="Sobre las Vacas Manguis">Nosotras</a>
+						<a href="{{ site.baseurl }}/" title="Volver al Inicio">{{ site.name }}</a>
+						<a href="{{ site.baseurl }}/blog/categories" title="clasificado por categorías">Categorías</a>
+						<a href="{{ site.baseurl }}/nosotras/" title="Todo sobre las Vacas Manguis">Nosotras</a>
 						<form action="https://www.google.com/cse"> 
 							<input type="hidden" name="cx" value="partner-pub-2493257171023914:8890185994"> 
 							<input type="text" name="q" placeholder="Buscar"> 
