--- a/_includes/partials/rights.html
+++ b/_includes/partials/rights.html
@@ -6,21 +6,21 @@
 				<label for="modal-rights">x</label>
 			<header>
 				<h2><i class="icon-creativecommons"></i>Creative Commons<h2>
-				<h6 class="lead">Alguns Drets Reservats</h6>
+				<h6 class="lead">Algunos Derechos Reservados</h6>
 			</header>
 			<div>
 				<p>
 					<div id="llicencia">
-						<img src="{{ site.baseurl }}/img/llicencia/cc_icon.png" alt="icona Creative Commons">
-						<img src="{{ site.baseurl }}/img/llicencia/attribution_icon.png" alt="icona Atribució">
-						<img src="{{ site.baseurl }}/img/llicencia/nc_icon.png" alt="icona NC">
-						<img src="{{ site.baseurl }}/img/llicencia/sa_icon.png" alt="icona SA">
-						<h6 class="yellow">Reconeixement - No Comercial - Compartir Igual<br>
+						<img src="{{ site.baseurl }}/img/llicencia/cc_icon.png" alt="icono Creative Commons">
+						<img src="{{ site.baseurl }}/img/llicencia/attribution_icon.png" alt="icono Atribución">
+						<img src="{{ site.baseurl }}/img/llicencia/nc_icon.png" alt="icono NC">
+						<img src="{{ site.baseurl }}/img/llicencia/sa_icon.png" alt="icono SA">
+						<h6 class="yellow">Reconocimiento - No Comercial - Compartir Igual<br>
 						<small>(CC BY-NC-SA 3.0)</small></h6>
-						<h5>Sou lliure de:</h5>
-						<b>Compartir</b> - copiar i redistribuir el material en qualsevol mitjà i format<br>
-						<b>Adaptar</b> - remesclar, transformar i crear a partir del material<br>
-						<em><u><a href="https://creativecommons.org/licenses/by-nc-sa/3.0/deed.ca" title="Llegir a Creativecommons.org" target="_blank">Més Informació</a></u></em>
+						<h5>Sois libre de:</h5>
+						<b>Compartir</b> - copiar y redistribuir el material en cualquier medio y formato<br>
+						<b>Adaptar</b> - remezclar, transformar y crear a partir del material<br>
+						<em><u><a href="https://creativecommons.org/licenses/by-nc-sa/3.0/deed.ca" title="Leer en Creativecommons.org" target="_blank">Más Información</a></u></em>
 					</div>
 				</p>
 			</div>
