--- a/_includes/partials/footer.html
+++ b/_includes/partials/footer.html
@@ -1,14 +1,14 @@
 		<footer id="page-footer">
 			<div>
 				<hr>
-				<em><small><a id="go-up" href="#page"><img src="{{ site.baseurl }}/hipertextos/svg/arrow-up.svg" alt="tornar a dalt"></a></small></em>
+				<em><small><a id="go-up" href="#page"><img src="{{ site.baseurl }}/hipertextos/svg/arrow-up.svg" alt="Volver arriba"></a></small></em>
 				<section id="follows">
             		{% include svg-icons.html %}
     			</section>
 				<p>
-				Disseny Web: <a href="http://isardmiralles.com/" target="blank" title="Disseny Gràfic">Isard Miralles</a>
-				Basat en: <a href="https://jekyllrb.com/" target="blank" title="Jekyll CMS">Jekyll Now</a>
-				amb <a href="http://hipertextos.github.io" target="blank" title="Hipertextos Framework">Barcelona CSS</a>. 
+				Edición Web: <a href="http://isardmiralles.com/" target="blank" title="Ir a la Web del Diseñador">Isard Miralles</a>
+				CMS: <a href="https://jekyllrb.com/" target="blank" title="Jekyll CMS">Jekyll Now {{ site.version }}</a>
+				CSS: <a href="http://hipertextos.github.io" target="blank" title="Barcelona CSS Framework">Barcelona CSS</a>. 
 				</p>
 			</div>
 		</footer>
