--- a/hipertextos/styles/adding.css
+++ b/hipertextos/styles/adding.css
@@ -112,10 +112,9 @@ img.dialog-svg {width:70px;height:70px;border-radius:21%;}
 em small #go-up { background:rgba(0,0,0,.1);padding:15px;border-radius:50%; }
 em small #go-up:hover {background:rgba(0,0,0,.3); }
 /* Footer fixed */
-main { padding-top:3px;margin-bottom: 232px;z-index: 1;
-    box-shadow:0 75px 60px rgba(0,0,0,.32);
-}
-#page-footer {position: fixed;box-shadow: inset 0 0 32px rgba(0, 0, 0, .32);bottom: 0px;z-index: -1;width: 100%;}
+main { padding-top:1px;margin-bottom: 6px;}
+#page-footer {box-shadow: inset 0 0 32px rgba(0, 0, 0, .32);bottom: 0px;width: 100%;}
+#page-footer p {padding-bottom:69px;}
 .pagination {display:none;visibility:hidden;}
 
 @media (max-width: 1250px) {
