--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-killnav: scrollable
+killnav: sticky-none
 ---
 
 	<header id="post-header" class="head-band anm-moveFromLeft">
