--- a/hipertextos/styles/adding.css
+++ b/hipertextos/styles/adding.css
@@ -21,8 +21,8 @@ main {padding-bottom:0!important;}
 #page-header.cover {background-image: url("/img/texture/videosmanguis.gif");background-color:var(--color-black);background-size:180px 180px;background-repeat: repeat;image-rendering: crisp-edges;}
 #page-header.cover h1 {margin-bottom:0px;}
 #page-header.page-title {color:var(--color-white);border:none;background-color:var(--color-hard-grey);box-shadow:inset 0 3px 21px rgba(0,0,0,.25);background-image: url("/img/texture/dark_grey.png");background-size:256px 256px;background-attachment:fixed ; background-repeat: repeat;image-rendering: crisp-edges;}
-#cover-logo {position:fixed;top:144px;right:6px;z-index:-1;}
-img#cover-logo {max-width:230px!important;height:auto;}
+#cover-logo {position:fixed;top:180px;left:44%;z-index:-1;}
+img#cover-logo {max-width:12.5%!important;height:auto;}
 .text-left {text-align:left;}
 .text-right {text-align:right;}
 em hr {border-bottom:thin solid #eee;}	
