--- a/hipertextos/styles/adding.css
+++ b/hipertextos/styles/adding.css
@@ -6,6 +6,7 @@ text-align: center;}
 /* Nav */
 #site-nav {background: var(--color-soft-black) !important;border-bottom: none;font-size: 17px;color: var(--color-grey);}
 #site-nav a {color:var(--color-grey)!important;font-weight: lighter;border: none;}
+#site-nav b a {font-family:'Mouse Memoirs', sans-serif;}
 #site-nav a:visited { color: var(--color-grey);text-decoration: none;}
 #site-nav a:hover, #site-nav a b:hover { color: var(--color-white);text-decoration: none;}
 #site-nav label {color:var(--color-grey);border:thin solid transparent;}
