--- a/hipertextos/styles/adding.css
+++ b/hipertextos/styles/adding.css
@@ -20,10 +20,10 @@ body {text-align: justify;-moz-hyphens:none;-ms-hyphens:none;-webkit-hyphens:non
 p, ul {font-size: 18px;line-height: 27px;}
 main {padding-bottom:0!important;}
 #page-header.cover {background-image: url("/img/texture/videosmanguis.gif");background-color:var(--color-black);background-size:180px 180px;background-repeat: repeat;image-rendering: crisp-edges;}
-#page-header.cover h1 {margin-bottom:0px;font-family:'Mouse Memoirs', sans-serif;}
+#page-header.cover h1 {margin-bottom:3px;font-family:'Mouse Memoirs', sans-serif;letter-spacing: 0.01em;}
 #page-header.page-title {color:var(--color-white);border:none;background-color:var(--color-hard-grey);box-shadow:inset 0 3px 21px rgba(0,0,0,.25);background-image: url("/img/texture/dark_grey.png");background-size:256px 256px;background-attachment:fixed ; background-repeat: repeat;image-rendering: crisp-edges;}
-#cover-logo {position:fixed;top:180px;left:44%;z-index:-1;}
-img#cover-logo {max-width:12.5%!important;height:auto;}
+#cover-logo {position:fixed ;top:69px;left:46.2%;}
+img#cover-logo {width:150px!important;height:auto;}
 .text-left {text-align:left;}
 .text-right {text-align:right;}
 em hr {border-bottom:thin solid #eee;}	
