--- a/hipertextos/styles/adding.css
+++ b/hipertextos/styles/adding.css
@@ -21,6 +21,7 @@ p, ul {font-size: 18px;line-height: 27px;}
 main {padding-bottom:0!important;}
 #page-header.cover {background-image: url("/img/texture/videosmanguis.gif");background-color:var(--color-black);background-size:180px 180px;background-repeat: repeat;image-rendering: crisp-edges;}
 #page-header.cover h1 {margin-bottom:3px;font-family:'Mouse Memoirs', sans-serif;letter-spacing: 0.01em;}
+#page-header.cover h2 small {letter-spacing: 0.015em;}
 #page-header.page-title {color:var(--color-white);border:none;background-color:var(--color-hard-grey);box-shadow:inset 0 3px 21px rgba(0,0,0,.25);background-image: url("/img/texture/dark_grey.png");background-size:256px 256px;background-attachment:fixed ; background-repeat: repeat;image-rendering: crisp-edges;}
 #cover-logo {position:fixed ;top:69px;left:46.2%;}
 img#cover-logo {width:150px!important;height:auto;}
