--- a/_includes/partials/navigation/nav-article.html
+++ b/_includes/partials/navigation/nav-article.html
@@ -1,8 +1,6 @@
 			<nav id="site-nav" class="nav-smart sticky-none">
 				<div>
-					<a class="site-logo" href="{{ site.baseurl }}/" title="Videos Manguis: Inicio">
-						<img src="{{ site.avatar }}" alt="Videos Manguis logo">
-					</a>
+					<a class="site-logo" href="{{ site.baseurl }}/" title="Videos Manguis: Inicio"><img src="{{ site.avatar }}" alt="Videos Manguis logo"></a>
 					<input type="checkbox" id="mobnav" name="mobnav" aria-hidden="true" hidden> 
 					<strong><label for="mobnav">Menú<mark></mark></label></strong>
 					<div hidden>
