--- a/_includes/partials/navigation/nav.html
+++ b/_includes/partials/navigation/nav.html
@@ -1,4 +1,4 @@
-			<nav id="site-nav" class="nav-smart {{ page.killnav }}">
+			<nav id="site-nav" class="nav-smart">
 				<div>
 					<a class="site-logo" href="{{ site.baseurl }}/" title="Videos Manguis: Inicio">
 						<img src="{{ site.avatar }}" alt="Videos Manguis logo">
