--- a/_includes/partials/navigation/nav-article.html
+++ b/_includes/partials/navigation/nav-article.html
@@ -1,4 +1,4 @@
-			<nav id="site-nav" class="nav-scroll">
+			<nav id="post-nav" class="nav-sticky">
 				<div>
 					<a class="site-logo" href="{{ site.baseurl }}/" title="Videos Manguis: Inicio"><img src="{{ site.avatar }}" alt="Videos Manguis logo"></a>
 					<input type="checkbox" id="mobnav" name="mobnav" aria-hidden="true" hidden> 
