--- a/_includes/partials/navigation/nav-article.html
+++ b/_includes/partials/navigation/nav-article.html
@@ -7,11 +7,9 @@
 						<a href="{{ site.baseurl }}/" title="BarcelonaCSS">{{ site.name }}</a>
 						<a href="{{ site.baseurl }}/blog/categories" title="Imperio Vacuno">Categorías</a>
 						<a href="{{ site.baseurl }}/nosotras/" title="Sobre las Vacas Manguis">Nosotras</a>
-						<form action="https://www.google.com/cse"> 
-							<input type="hidden" name="cx" value="partner-pub-2493257171023914:8890185994"> 
-							<input type="text" name="q" placeholder="Buscar"> 
-							<input type="submit" name="sa" value="&cirE;"> 
-						</form>
+						
+						<a href="{{ site.baseurl }}/xxx" title="xxx" class="anterior">Anterior</a>
+						<a href="{{ site.baseurl }}/xxx" title="xxx" class="siguiente">Siguiente</a>
 					</div>
 				 </div>
 			</nav>
