--- a/_includes/partials/navigation/nav-article.html
+++ b/_includes/partials/navigation/nav-article.html
@@ -1,9 +1,26 @@
 			<nav id="post-nav" class="nav-post">
 				<div>
-					<a class="site-logo" href="{{ site.baseurl }}/" title="Videos Manguis: Inicio"><img src="{{ site.avatar }}" alt="Videos Manguis logo"></a>
-					<a href="{{ site.baseurl }}/" title="BarcelonaCSS">{{ site.name }}</a>
-					<a href="{{ site.baseurl }}/blog/categories" title="Imperio Vacuno">Categorías</a>
-					<a href="{{ site.baseurl }}/nosotras/" title="Sobre las Vacas Manguis">Nosotras</a>
+					<a class="site-logo" href="{{ site.baseurl }}/" title="Videos Manguis: Inicio"><img src="{{ site.avatar }}" alt="Videos Manguis logo"> {{ site.name }}</a>
+<ol class="breadcrumb">
+<li><a href="{{ site.baseurl }}/">Home</a></li>
+{% capture page_url_without_index_html %}{{ page.url | remove: "/index.html" }}{% endcapture %}
+{% assign splitted_url_parts = page_url_without_index_html | split: '/' %}
+{% capture forLoopMaxInt %}{{ splitted_url_parts.size | minus:1 }}{% endcapture %}
+{% for i in (1..forLoopMaxInt) %}
+    {% capture current_breadcrumb_url %}{{next_prepender}}/{{ splitted_url_parts[i] }}/index.html{% endcapture %}
+    {% capture current_breadcrumb_md_url %}{{next_prepender}}/{{ splitted_url_parts[i] }}/{% endcapture %}
+    {% capture next_prepender %}{{next_prepender}}/{{ splitted_url_parts[i] }}{% endcapture %}
+    {% for breadcrumb_page in site.pages %}
+        {% if current_breadcrumb_url == breadcrumb_page.url or current_breadcrumb_md_url == breadcrumb_page.url  %}
+        {% assign j = forLoopMaxInt | plus: 0 %}
+            <li {% if i == j %}class="active"{% endif %}>
+                {% capture breadcrumb_page_page_url_without_index_html %}{{ breadcrumb_page.url | remove: "index.html" }}{% endcapture %}
+                <a href="{{ site.baseurl }}{{breadcrumb_page_page_url_without_index_html}}">{{breadcrumb_page.breadcrumb}}</a>
+            </li>
+        {% endif %}
+    {% endfor %}
+{% endfor %}
+</ol>
 						
 					<a href="{{ site.baseurl }}/xxx" title="xxx" class="anterior">Anterior</a>
 					<a href="{{ site.baseurl }}/xxx" title="xxx" class="siguiente">Siguiente</a>
