--- a/_includes/partials/navigation/nav-article.html
+++ b/_includes/partials/navigation/nav-article.html
@@ -1,7 +1,7 @@
 			<nav id="post-nav" class="nav-post">
 				<div>
 					<a class="site-logo" href="{{ site.baseurl }}/" title="Videos Manguis: Inicio"><img src="{{ site.avatar }}" alt="Videos Manguis logo"> {{ site.name }}</a>
-					<a href="{{ site.baseurl }}{{ post.url }}" title="{{ post.title }}">{{ post.url }}</a>
+					<a href="{{ site.baseurl }}{{ page.url }}" title="{{ page.title }}">{{ page.url }}</a>
 						
 					<a href="{{ site.baseurl }}/xxx" title="xxx" class="anterior">Anterior</a>
 					<a href="{{ site.baseurl }}/xxx" title="xxx" class="siguiente">Siguiente</a>
