--- a/_includes/partials/navigation/nav-article.html
+++ b/_includes/partials/navigation/nav-article.html
@@ -2,19 +2,11 @@
 				<div>
 					<a class="site-logo" href="{{ site.baseurl }}/" title="Videos Manguis: Inicio"><img src="{{ site.avatar }}" alt="Videos Manguis logo"> {{ site.name }}</a>
 					<a href="{{ site.baseurl }}{{ page.url }}" title="{{ page.title }}">{{ page.url }}</a>
-						
-					<a href="{{ site.baseurl }}/xxx" title="xxx" class="siguiente">Siguiente</a>
-					<a href="{{ site.baseurl }}/xxx" title="xxx" class="anterior">Anterior</a>
-					
-					
-					<div class="PageNavigation">
-					  {% if page.previous.url %}
-					    <a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
-					  {% endif %}
 					  {% if page.next.url %}
-					    <a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
+					    <a class="next" href="{{page.next.url}}" class="siguiente">{{page.next.title}} &raquo;</a>
 					  {% endif %}
-					</div>
-					
+					  {% if page.previous.url %}
+					    <a class="prev" href="{{page.previous.url}}" class="anterior">&laquo; {{page.previous.title}}</a>
+					  {% endif %}					
 				 </div>
 			</nav>
