--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,6 +29,14 @@ layout: default
       <a href="{{ site.baseurl }}/blog/tags/#{{ tag }}" class="tagged">{{ tag }}</a>
     {% endfor %}
 				</div>
+				<div class="PageNavigation">
+				  {% if page.previous.url %}
+				    <a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
+				  {% endif %}
+				  {% if page.next.url %}
+				    <a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
+				  {% endif %}
+				</div>
 				<aside id="post-share">
 					{% include share.html %}
 				</aside>
