--- a/_includes/partials/navigation/nav-article.html
+++ b/_includes/partials/navigation/nav-article.html
@@ -1,6 +1,6 @@
 			<nav id="post-nav" class="nav-post">
 				<div>
-					<a class="site-logo" href="{{ site.baseurl }}/" title="Videos Manguis: Inicio"><img src="{{ site.avatar }}" alt="Videos Manguis logo"> {{ site.name }}</a>
+					<a class="site-logo" href="{{ site.baseurl }}/" title="Videos Manguis: Inicio"><img src="{{ site.avatar }}" alt="Videos Manguis logo"> {{ site.name }}.net</a>
 					<a href="{{ site.baseurl }}{{ page.url }}" title="{{ page.title }}">{{ page.url }}</a>
 					  {% if page.next.url %}
 					    <a class="next" href="{{page.next.url}}" class="siguiente">{{page.next.title}} &raquo;</a>
