--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ layout: default
 						</figure>
 					</div>
 					<figure id="post-img">
-						<img src="https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg" rel="{{ tag | slugify }}">
+						<img src="https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg" rel="{% for tag in page.tags %} {{ tag }}, {% endfor %}">
 					</figure>
 	    			{{ content }}
 				</div>
@@ -31,10 +31,16 @@ layout: default
 				</div>
 				<div class="PageNavigation">
 				  {% if page.previous.url %}
-				    <a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
+				  	<figure>
+						<img src="https://i1.ytimg.com/vi/{{ page.previous.img }}/maxresdefault.jpg" rel="{% for tag in page.previous.tags %} {{ tag }}, {% endfor %}">
+					</figure>
+				    <a class="prev" href="{{ page.previous.url }}">&laquo; {{ page.previous.title }}</a>
 				  {% endif %}
 				  {% if page.next.url %}
-				    <a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
+				  	<figure>
+						<img src="https://i1.ytimg.com/vi/{{ page.next.img }}/maxresdefault.jpg" rel="{% for tag in page.next.tags %} {{ tag }}, {% endfor %}">
+					</figure>
+				    <a class="next" href="{{ page.next.url }}">{{ page.next.title }} &raquo;</a>
 				  {% endif %}
 				</div>
 				<aside id="post-share">
