--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,7 +33,7 @@ layout: default
 				  {% if page.previous.url %}
 				  	<div class="prev">
 				  	<a class="thumb-3" href="{{ page.previous.url }}">&laquo; {{ page.previous.title }}</a>
-				  	<a class="thumb-3" href="{{ page.next.url }}"><img src="https://i1.ytimg.com/vi/{{ page.previous.img }}/maxresdefault.jpg" rel="{% for tag in page.previous.tags %} {{ tag }}, {% endfor %}"></a>
+				  	<a class="thumb-3" href="{{ page.previous.url }}"><img src="https://i1.ytimg.com/vi/{{ page.previous.img }}/maxresdefault.jpg" rel="{% for tag in page.previous.tags %} {{ tag }}, {% endfor %}"></a>
 					</div>
 				  {% endif %}
 				  {% if page.next.url %}
