--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,12 +41,12 @@ layout: default
 				  {% if page.previous.url %}
 				  	<div class="prev">
 				  	<a class="thumb-2" href="{{ page.previous.url }}"><img src="https://i1.ytimg.com/vi/{{ page.previous.img }}/maxresdefault.jpg" rel="{% for tag in page.previous.tags %} {{ tag }}, {% endfor %}"></a>
-				  	<a class="thumb-4" href="{{ page.previous.url }}"><h5>&laquo; Anterior</h5><br>{{ page.previous.title }}</a>
+				  	<a class="thumb-4" href="{{ page.previous.url }}"><h5>&laquo; Anterior</h5><h6>{{ page.previous.title }}</h6></a>
 					</div>
 				  {% endif %}
 				  {% if page.next.url %}
 					<div class="next">
-				  	<a class="thumb-4" href="{{ page.next.url }}"><h5>Siguiente &raquo;</h5><br>{{ page.next.title }}</a>
+				  	<a class="thumb-4" href="{{ page.next.url }}"><h5>Siguiente &raquo;</h5><h6>{{ page.next.title }}</h6></a>
 					<a class="thumb-2" href="{{ page.next.url }}"><img src="https://i1.ytimg.com/vi/{{ page.next.img }}/maxresdefault.jpg" rel="{% for tag in page.next.tags %} {{ tag }}, {% endfor %}"></a>
 					</div>
 				  {% endif %}
